Details
-
Bug
-
Resolution: Fixed
-
Minor
-
0.4.15-dev-5526-g4c25af5 https://github.com/reactos/reactos/commit/4c25af5bd4ac8ea3bdfb855478683980922ed32b
Description
reactos-bootcd-0.4.15-dev-6166-ge7ccb36-x86-gcc-lin-dbg
- Open My Computer
- Show as "detailed view"
"Comment" indicated in "capacity" field for NTObjects Space and Registry explorer
Expected result : "Comment" indicated in "Comment" field for NTObjects Space and Registry explorer
Cause of the bug is CDrivesFolder::GetDetailsOf due to "return m_regFolder->GetDetailsOf(pidl, iColumn, psd);" https://git.reactos.org/?p=reactos.git;a=blob;f=dll/win32/shell32/folders/CDrivesFolder.cpp#l1149
Regression, guilty commit : https://github.com/reactos/reactos/commit/4c25af5bd4ac8ea3bdfb855478683980922ed32b
Attachments
Issue Links
- blocks
-
CORE-18743 Unhandled Exception when right clicking in Control Panel in "List view"
-
- Resolved
-
-
CORE-18501 Control Panel, Registry Folder : "Detailed List" view issues
-
- Resolved
-
- clones
-
CORE-11846 [shell32] My Computer: Type column lists incorrect types
-
- Resolved
-