[SHELL32] Fix detail view in My Computer showing Comment in 'Total Size' column (#5438) CORE-19000

Fixes the regression of 0.4.15-dev-5526-g 4c25af5b